# opengl-final-project

./: CMakeLists.txt  README.md  geometry.cpp  geometry.h  headers.h  house.cpp  house.h  main.cpp  platform.cpp  platform.h  rain.cpp  rain.h  scene.cpp  texture.cpp  texture.h  weather.cpp
include/: geometry.h  house.h  scene.h  weather.h
src/: main.cpp  platform.cpp  texture.cpp  weather.cpp
